Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98311

QML bitwise 'or' operator is not evaluated correctly when initializing C++ property and both operands are enum values

    XMLWordPrintable

Details

    • Linux/X11, Windows
    • e743b6e5e93392584b0eb10215102952e6a78730 (qt/qtdeclarative/dev) bcfad17be39a95c50ae13cf428e8d017efd1ba6b (qt/qtdeclarative/6.2)

    Description

      I'm trying to use MessageDialog.

      Settings buttons property to MessageDialog.Ok | MessageDialog.Cancel. Result: only one button is showing.

      If I declare two additional int properties:

      property int btnok: MessageDialog.Ok
      property int btncancel: MessageDialog.Cancel

      and then set buttons property to btnok | btncancel -  it woks fine.

      Attachments

        For Gerrit Dashboard: QTBUG-98311
        # Subject Branch Project Status CR V

        Activity

          People

            fabiankosmale Fabian Kosmale
            alervd Alexander Dyagilev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes